<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="favouritesEntity"
            type="mk.ukim.finki.foody.data.database.entities.FavouritesEntity" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/favouriteRecipesRowLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp">

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/favouriteRow_cardView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:strokeColor="@color/lightMediumGray"
            app:strokeWidth="1dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/insideCard_constraintLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/white">

                <ImageView
                    android:id="@+id/favouriteRecipe_imageView"
                    loadImageFromUrl="@{favouritesEntity.result.image}"
                    android:layout_width="200dp"
                    android:layout_height="0dp"
                    android:scaleType="centerCrop"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:srcCompat="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/favouriteTitle_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="12dp"
                    android:ellipsize="end"
                    android:fontFamily="@font/courgette"
                    android:maxLines="2"
                    android:text="@{favouritesEntity.result.title}"
                    android:textColor="@color/darker"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toEndOf="@+id/favouriteRecipe_imageView"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/favouriteDescription_textView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:ellipsize="end"
                    android:maxLines="3"
                    parseHtml="@{favouritesEntity.result.summary}"
                    android:textColor="@color/darkGray"
                    app:layout_constraintEnd_toEndOf="@+id/favouriteTitle_textView"
                    app:layout_constraintStart_toStartOf="@+id/favouriteTitle_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favouriteTitle_textView" />

                <ImageView
                    android:id="@+id/favouriteHeart_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="36dp"
                    android:contentDescription="@string/heart_image"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/favouriteDescription_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favouriteDescription_textView"
                    app:layout_constraintVertical_bias="0.077"
                    app:srcCompat="@drawable/ic_heart"
                    app:tint="@color/red" />

                <TextView
                    android:id="@+id/favouriteHeart_textView"
                    integerToString="@{favouritesEntity.result.aggregateLikes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/red"
                    app:layout_constraintEnd_toEndOf="@+id/favouriteHeart_imageView"
                    app:layout_constraintStart_toStartOf="@+id/favouriteHeart_imageView"
                    app:layout_constraintTop_toBottomOf="@+id/favouriteHeart_imageView" />

                <ImageView
                    android:id="@+id/favouriteClock_imageView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/clock_image"
                    app:layout_constraintEnd_toEndOf="@+id/favouriteClock_textView"
                    app:layout_constraintStart_toStartOf="@+id/favouriteClock_textView"
                    app:layout_constraintTop_toTopOf="@+id/favouriteHeart_imageView"
                    app:srcCompat="@drawable/ic_clock"
                    app:tint="@color/yellow" />

                <TextView
                    android:id="@+id/favouriteClock_textView"
                    integerToString="@{favouritesEntity.result.readyInMinutes}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:textAlignment="center"
                    android:textColor="@color/yellow"
                    app:layout_constraintStart_toEndOf="@+id/favouriteHeart_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favouriteClock_imageView" />

                <ImageView
                    android:id="@+id/favouriteLeaf_imageView"
                    applyVeganColor="@{favouritesEntity.result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:contentDescription="@string/leaf_image"
                    app:layout_constraintEnd_toEndOf="@+id/favouriteLeaf_textView"
                    app:layout_constraintStart_toStartOf="@+id/favouriteLeaf_textView"
                    app:layout_constraintTop_toTopOf="@+id/favouriteClock_imageView"
                    app:srcCompat="@drawable/ic_leaf" />

                <TextView
                    android:id="@+id/favouriteLeaf_textView"
                    applyVeganColor="@{favouritesEntity.result.vegan}"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:text="@string/vegan"
                    android:textAlignment="center"
                    app:layout_constraintStart_toEndOf="@+id/favouriteClock_textView"
                    app:layout_constraintTop_toBottomOf="@+id/favouriteLeaf_imageView" />
            </androidx.constraintlayout.widget.ConstraintLayout>
        </com.google.android.material.card.MaterialCardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>